V2.1.0
##New Features
* Added logger. App logs can be downloaded via the "Help" menu.
* Frequency range can now be entered manually (via "Band" menu or f-hotkey)
* Added hotkeys 1-9 for switching bands. Use "Band" menu or SHIFT-<hotkey> to save current band

V2.0.4
##New Features
* Added forbidden frequencies for Croatia

V2.0.3
##New Features
* Added Audix vendor presets for R41/R42 and R61/R62

V2.0.2
##FIXES
* Fixed issue regarding Shure Wireless Workbench export

V2.0.1
##FIXES
* Fixed issue of not being able to select frequency bands

V2.0.0
##New Features
* Added Support for TinySA and TinySA Ultra hardware
* Configurable number of sweep points for TinySA hardware
* Automatic port detection
* Hot pluging (no need to restart the app when connecting a device)
* Added menu option to reset settings (in case the app hangs)
* Added dark mode
* Vendor presets can now also be toggled by <CTRL> + mouse wheel tilt
* Added donate button :-)
##FIXES
* Now only showing countries which have frequency data available
* Improved device detection
* Improved information in notification popups

V1.8.0
    FIXES
        - Fix for issue #29: Java Script Error

V1.7.6
    FEATURES
        - Added forbidden frequency ranges for Turkey

V1.7.5
    FIXES
        - Fix for issue #21: Scan graph not drawn on Linux in some cases

V1.7.3
    FIXES
        - Added application menu on Mac

V1.7.2
    FEATURES
        - Added Australian TV channels and forbidden ranges
    FIXES
        - Fixed broken restart handling and broken handling of dialog boxes in general
        - Moved back from portable to NSIS installer. Otherwise restart is not working

V1.7.1
    FEATURES
        - On Windows the EXE now is a portable app and no longer an installer

    FIXES
        - Fixed broken CSV export for Wireless Workbench

V1.7.0
    FEATURES
        - Fast scrolling/zooming with SHIFT now possible with mouse as well
        - Corrected wrong zoom percentage values

V1.6.2
    FEATURES