@@ -3,20 +3,35 @@
 const { DelimiterParser } = require ( '@serialport/parser-delimiter');
 
 class RFExplorer {
-    static NAME     = 'RF Explorer';
-    static HW_TYPE   = 'RF_EXPLORER';
-    static BAUD_RATE = 500000;
-    static MIN_SPAN = 112000
+    static NAME       = 'RF Explorer'; // Basic device name
+    static MODEL     = '' // This divides devices with the same base NAME and HW_TYPE into specific models
+    // The device type shares the same API with similar devices. This is e.g. needed for sw to know how a
+    // device can be contacted via the serial port.
+    static HW_TYPE    = 'RF_EXPLORER';
+    static BAUD_RATE  = 500000;
+
+    static MIN_SPAN_BASIC = 112000; // 112 kHz
+    static MAX_SPAN_BASIC = 600000000; // 600 MHz
+    static MIN_SWEEP_POINTS_BASIC = 112
+    static MAX_SWEEP_POINTS_BASIC = 112
+    
+    static MIN_SPAN_PLUS  = 112000; // 112 kHz
+    static MAX_SPAN_PLUS  = 192500000; // 192.5 MHz
+    static MIN_SWEEP_POINTS_PLUS = 112
+    static MAX_SWEEP_POINTS_PLUS = 65535
+
     static deviceCommands = {
         GET_CONFIG: '#0C0',    // Get current configuration
         SET_CONFIG: '#0C2-F:', // Set configuration
-        HOLD: '#0CH'           // Tell the device to stop sending scan data
+        HOLD: '#0CH',          // Tell the device to stop sending scan data
+        SET_SWEEP_POINTS_LARGE :'#0Cj'  // Set number of sweep points up to 65536
     };
     static deviceEvents = {
         NAME: 'RF Explorer',
         DEVICE_DATA: '#C2-M:',     // '#C2-M:' = Main model code, expansion model code and firmware version
         CONFIG_DATA: '#C2-F:',     // '#C2-F:' = config data from scan device
-        SCAN_DATA: '$S',           // '$S' = sweep data, 'p' = ASCII code 112 ( 112 sweep points will be received) 'à' = ASCII code 224 ( 224 sweep points will be received)        
+        SCAN_DATA: '$S',           // '$S' = sweep data, 'p' = ASCII code 112 ( 112 sweep points will be received) 'à' = ASCII code 224 ( 224 sweep points will be received)
+        SCAN_DATA_LARGE: '$z',     // '$s' = sweep data, 'p' = ASCII code 112 ( 112 sweep points will be received) 'à' = ASCII code 224 ( 224 sweep points will be received)
         CALIBRATION_DATA: '#CAL:', // Calibration data ?? (nothing in the docs)
         QUALITY_DATA: '#QA:',      // Quality data ?? (nothing in the docs)
         SERIAL_NUMBER: '#Sn'       // Serial number
@@ -29,6 +44,40 @@ class RFExplorer {
 
     constructor (port) {
         this.port = port
+    }
+
+    getMinSweepPoints () {
+        switch ( RFExplorer.MODEL ) {
+            case 'BASIC': return RFExplorer.MIN_SWEEP_POINTS_BASIC;
+            case 'PLUS' : return RFExplorer.MIN_SWEEP_POINTS_PLUS;
+        }
+    }
+
+    getMaxSweepPoints () {
+        switch ( RFExplorer.MODEL ) {
+            case 'BASIC': return RFExplorer.MAX_SWEEP_POINTS_BASIC;
+            case 'PLUS' : return RFExplorer.MAX_SWEEP_POINTS_PLUS;
+        }
+    }
+
+    isValidSweepPointRange ( numOfSweepPoints ) {
+        switch ( RFExplorer.MODEL ) {
+            case 'BASIC':
+                if ( numOfSweepPoints >= RFExplorer.MIN_SWEEP_POINTS_BASIC &&
+                     numOfSweepPoints <= RFExplorer.MAX_SWEEP_POINTS_BASIC ) {
+                    return true
+                } else {
+                    return false
+                }
+
+            case 'PLUS':
+                if ( numOfSweepPoints >= RFExplorer.MIN_SWEEP_POINTS_PLUS &&
+                     numOfSweepPoints <= RFExplorer.MAX_SWEEP_POINTS_PLUS ) {
+                    return true
+                } else {
+                    return false
+                }       
+        }
     }
 
     getConfiguration () {
@@ -72,12 +121,42 @@ class RFExplorer {
         }
     }
 
+    async setSweepPoints ( numberOfSweepPoints ) {
+        log.info ( `Setting number of sweep points to ${numberOfSweepPoints} ...` )
+        // Second character will be replaced by a binary lenght value        
+        // '00' is just a placeholder for two bytes in the buffer which will be replaced by MSB/LSB
+        let sendBuf = Buffer.from ( RFExplorer.deviceCommands.SET_SWEEP_POINTS_LARGE + '00', 'ascii' );
+        sendBuf.writeUInt8 ( 0x6, 1 );
+        sendBuf.writeUInt8 ( (numberOfSweepPoints & 0xFF00) >> 8, 4 ); // MSB
+        sendBuf.writeUInt8 ( numberOfSweepPoints & 0x00FF       , 5 ); // LSB
+        await this.port.writePromise ( sendBuf, 'ascii' )
+    }
+
     setHandler (data$) {
         log.info ( `Setting handler for ${RFExplorer.NAME} data receiption ... ` )
         const parser = this.port.pipe(new DelimiterParser({ delimiter: '\r\n' }))
 
         parser.on ( 'data', (res) => {
             let buf = String.fromCharCode.apply ( null, res )
+
+            // When a command is sent to the device, on newer models of RF Explorer (PLUS variant),
+            // the device is transmitting a so called EOS sequence ('End Of Sweep') to acknowledge
+            // the end of an ongoing sweep. This sequence is FF FE FF FE 00 (as string: 'ÿþÿþ ').
+            // We need to strip these characters before processing the string.
+            let eosSequences = [
+                { sequence: 'ÿþÿþ\x00#', offset: 5 },
+                { sequence: 'þ\x00#'   , offset: 2 },
+                { sequence: 'ÿþÿþ\x00$', offset: 5 },
+                { sequence: 'þ\x00$'   , offset: 2 }
+            ]
+
+            for ( const eosSequence of eosSequences) {
+                let eosIdx = buf.indexOf ( eosSequence.sequence )
+
+                if ( eosIdx !== -1 ) {
+                    buf = buf.substring ( eosIdx + eosSequence.offset )
+                }
+            }
 
             for ( let deviceEventType in this.constructor.deviceEvents ) {
                 let deviceEvent = this.constructor.deviceEvents[deviceEventType]
@@ -94,8 +173,26 @@ class RFExplorer {
                         return
                     }
 
-                    const dataLength = parseInt ( deviceEvent === RFExplorer.deviceEvents.SCAN_DATA ? buf[deviceEvent.length]  : (buf.length - deviceEvent.length) )
-                    const data = buf.substring  ( deviceEvent === RFExplorer.deviceEvents.SCAN_DATA ? (deviceEvent.length + 1) : deviceEvent.length ) // +1 to exclude the byte following the message ID which contains the number of sweep points
+                    let dataLength = 0;
+                    let data = ''
+
+                    switch (deviceEvent) {
+                        case RFExplorer.deviceEvents.SCAN_DATA:
+                            dataLength = buf.charCodeAt(deviceEvent.length)
+                            data = buf.substring  ( deviceEvent.length + 1 ) // +1 to exclude the byte following the message ID which contains the number of sweep points
+                            break
+
+                        case RFExplorer.deviceEvents.SCAN_DATA_LARGE:
+                            const MSB = buf.charCodeAt(deviceEvent.length)
+                            const LSB = buf.charCodeAt(deviceEvent.length + 1)
+                            dataLength = (MSB << 8) | LSB;
+                            data = buf.substring  ( deviceEvent.length + 2 ) // +2 to exclude the two bytes following the message ID which contain the number of sweep points
+                            break
+
+                        default:
+                            dataLength = buf.length - deviceEvent.length
+                            data = buf.substring ( deviceEvent.length )
+                    }
 
                     switch ( deviceEvent ) {
                         case this.constructor.deviceEvents.CONFIG_DATA: // Received config data from scan device
@@ -153,16 +250,19 @@ class RFExplorer {
                                 case 4:  mainModelString = '2.4G'       ; break;
                                 case 5:  mainModelString = 'WSUB3G'     ; break;
                                 case 6:  mainModelString = '6G'         ; break;
-                                case 10: mainModelString = 'WSUB1G_PLUS'; break;
+                                case 10: mainModelString = 'WSUB1G_PLUS';
+                                    RFExplorer.MODEL = 'PLUS'
+                                    break;
                                 case 60: mainModelString = 'RFEGEN'     ; break;
                                 default:
+                                    RFExplorer.MODEL = 'BASIC'
                                     log.error( `Unknown 'RF Explorer' model code: ${mainModelCode}` )
                             }
 
                             switch (expansionModelCode) {
                                 case 4:   expansionModelString = '2.4G'              ; break;
                                 case 5:   expansionModelString = 'WSUB3G'            ; break;
-                                case 12:  expansionModelString = '2.4G Gen 2'        ; break;
+                                case 12:  expansionModelString = 'WSUB3G PLUS'       ; break;
                                 case 255: expansionModelString = 'No expansion model'; break;
                                 default:
                                     log.error( `Unknown expansion model code: ${expansionModelCode}` )
@@ -174,6 +274,15 @@ class RFExplorer {
                         } break;
 
                         case this.constructor.deviceEvents.SCAN_DATA:
+                            if ( this.received_config_data ) {
+                                data$.next([{
+                                    type: "SCAN_DATA",
+                                    values: data
+                                }])
+                            }
+                            break
+
+                        case this.constructor.deviceEvents.SCAN_DATA_LARGE:
                             if ( this.received_config_data ) {
                                 data$.next([{
                                     type: "SCAN_DATA",
